tests/matrices/invalid/invalid_bad_format.mtx
%%MatrixMarket matrix ____ real general
% invalid format
4 4 0
